--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>¡Nos casamos!</h1>
-    <p>Mateo 💍 Ainara</p>
-    <p>Te invitamos a nuestra boda el 13 de diciembre.</p>
+    <button onclick="window.location.href='invitacion.html'"></button>
 </body>
 </html>
